<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="any_end_will_do.mangohacks.SignUpActivity">

    <EditText
        android:id="@+id/email_edit_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/password_edit_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/name_edit_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_name"/>

    <EditText
        android:id="@+id/industry_edit_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/industry_type"/>

    <EditText
        android:id="@+id/company_edit_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"/>


</RelativeLayout>
