<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/profile_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/user_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_company"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/email_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/phone_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/address_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_address"
            android:textSize="20sp"/>

    </LinearLayout>

</RelativeLayout>